--- a/css/style.css
+++ b/css/style.css
@@ -99,55 +99,6 @@ a:focus {
 }
 
 /*header section*/
-.hero_area {
-  position: relative;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.hero_area .hero_bg_box {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
-  overflow: hidden;
-  z-index: -1;
-}
-
-.hero_area .hero_bg_box .bg_img_box {
-  min-width: 100%;
-  min-height: 100%;
-}
-
-.hero_area .hero_bg_box img {
-  min-width: 100%;
-  min-height: 100%;
-}
-
-.sub_page .hero_area {
-  min-height: 0;
-  background: linear-gradient(130deg, #231a6f, #0f054c);
-}
-
-.sub_page .hero_area .hero_bg_box {
-  display: none;
-}
 
 .head-arrangement {
   top: 10px;
@@ -163,18 +114,22 @@ a:focus {
   margin-top: 80px;
 }
 
+.pointer {
+  cursor: default;
+}
+
 .header_section::before {
   content: "";
   position: absolute;
   top: 0;
   height: 100%;
   width: 100%;
-  background: #003f92f5;
+  background: #003f92f3;
   border-radius: 8px;
 }
 
 .header_section {
-  width: 98%;
+  min-width: 86%;
   border: 3px solid #004299;
   border-radius: 10px;
   box-shadow: 0 2px 20px #001e46;
@@ -683,6 +638,7 @@ a:focus {
   color: #ffffff;
   padding-top: 100px;
   padding-bottom: 172px;
+  padding: 100px 65px 172px 65px;
 }
 
 .team_section .heading_container {
