--- a/pages/admin-panel/src/partials/header.html
+++ b/pages/admin-panel/src/partials/header.html
@@ -616,7 +616,7 @@
             <img src="./images/user/owner.jpg" alt="User" />
           </span>
 
-          <span class="text-theme-sm mr-1 block font-medium"> Musharof </span>
+          <span class="text-theme-sm mr-1 block font-medium"> Divyanshu </span>
 
           <svg
             :class="dropdownOpen && 'rotate-180'"
@@ -646,12 +646,12 @@
             <span
               class="text-theme-sm block font-medium text-gray-700 dark:text-gray-400"
             >
-              Musharof Chowdhury
+              Divyanshu Barpete
             </span>
             <span
               class="text-theme-xs mt-0.5 block text-gray-500 dark:text-gray-400"
             >
-              randomuser@pimjo.com
+              rajeshbarpete11@gmail.com
             </span>
           </div>
 
