--- a/pages/admin-panel/src/partials/sidebar.html
+++ b/pages/admin-panel/src/partials/sidebar.html
@@ -39,7 +39,7 @@
             class="menu-group-title"
             :class="sidebarToggle ? 'lg:hidden' : ''"
           >
-            MENU
+            Menu
           </span>
 
           <svg
@@ -126,7 +126,7 @@
                     class="menu-dropdown-item group"
                     :class="page === 'ecommerce' ? 'menu-dropdown-item-active' : 'menu-dropdown-item-inactive'"
                   >
-                    eCommerce
+                    Commerce
                   </a>
                 </li>
               </ul>
@@ -163,7 +163,7 @@
                 class="menu-item-text"
                 :class="sidebarToggle ? 'lg:hidden' : ''"
               >
-                Calendar
+                Important Date
               </span>
             </a>
           </li>
